# ScalerHack

./: README.md
supply_chain_env/: .dockerignore  .gitignore  .pyre_configuration  PROJECT_HANDBOOK.md  README.md  __init__.py  client.py  dashboard.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test.py
supply_chain_env/server/: Dockerfile  __init__.py  app.py  graders.py  requirements.txt  supply_chain_environment.py
supply_chain_env/supply_chain_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
